# CS5330ComputerVision

./: .gitignore  README.md
project1_video_special_effects/: CMakeLists.txt  README.md  app  main.cpp  timeBlur.cpp
project1_video_special_effects/faceDetect/: CMakeLists.txt
project1_video_special_effects/include/: faceDetect.h  filter.h  imgDisplay.h  vidDisplay.h
project1_video_special_effects/src/: filter.cpp  imgDisplay.cpp  vidDisplay.cpp
project2_content_based_image_retrieval/: CMakeLists.txt  README.md  main.cpp  main_part2.cpp
project2_content_based_image_retrieval/include/: csv_util.h  distance.h  feature.h  imgProcess.h
project2_content_based_image_retrieval/src/: csv_util.cpp  distance.cpp  feature.cpp  imgProcess.cpp
project3_object_recognition/: CMakeLists.txt  README.md  main.cpp
project3_object_recognition/include/: objDetect.h
project3_object_recognition/src/: objDetect.cpp
project4_calibration_and_AR/: CmakeLists.txt  README.md  ar.cpp  harris.cpp  main.cpp  main2.cpp
project4_calibration_and_AR/include/: chessboardcorner.h
project4_calibration_and_AR/src/: chessboardcorner.cpp
project5_recognition_using_deep_learning/: FashionMnistCNN.py  MyNetwork.py  README.md  autoencoder.py  experiment.py  greek.py  greek_model.pth  greek_predict.py  live_detect.py  main.py  mnist_model.pth  modl_config_exp.pkl  predict.py  pretrained_weights.py  requirements.txt  utils.py  weights.py
project5_recognition_using_deep_learning/models/: ConvAutoencoder.py  FashionMnistCNN.py  MyNetwork.py
project5_recognition_using_deep_learning/myenv/: pyvenv.cfg
test_app/: CMakeLists.txt  main.cpp
